# profile-gpt

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Intentions.md  PRD.md  README.md  USAGE_API_INTEGRATION.md  analyze_logs.py  app.py  config_validator.py  dataset_manager.py  docker-compose.yml  intent_classifier.py  intent_validator.py  job_vetting.py  notes  persona.txt  pyproject.toml  query_logger.py  version.py
mockups/: bold-vibrant.html  glassmorphism.html  modern-minimal.html  professional-corporate.html
static/css/: style.css
static/js/: main.js
templates/: dataset.html  error.html  extension_requests.html  index.html  usage_api.html
